--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Lewisham Church of christ</title>
-
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<meta name="description" content="">
 	<meta name="author" content="">
 
+	<title>Lewisham Church of christ</title>
+
+	<link rel="stylesheet" href="css/ie10-viewport-bug-workaround.css">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -21,15 +22,15 @@
 	<script src ="bower_components/angular-material/angular-material.min.js"></script>
 	<script src="bower_components/angular-animate/angular-animate.min.js"></script>
 	<script src="bower_components/angular-aria/angular-aria.min.js"></script>
+
 	<script src="js/app.js"></script>
 	<script src="js/churchAppController.js"></script>
 	<script src="js/route-provider.js"></script>
 </head>
 <body ng-app="app" ng-controller="appController" >
-<div id="main" class="container-fluid" >
-	<div class="navbar navbar-default navbar-fixed-top" role="navigation" id="navBar" ng-include="'view/template/menu-template.html'" ></div>
+	<div ng-include="'view/template/menu-template.html'" ></div>
 	<div class="container">
-		<div class="row" id="view-layout">
+		<div class="row">
 			<div class="col-sm-8">
 				<div ng-view></div>
 			</div>
@@ -38,7 +39,6 @@
 			</div>
 		</div>
 	</div>
-</div>
 <footer>
 	<p class="pull-right"><a href="#">Back to top</a></p>
 	<p>&copy; {{currentYear}} LCOC. &reg;
@@ -49,5 +49,6 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/addons/bootstrap/jquery.smartmenus.bootstrap.js"></script>
 <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.1.4.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
+<script src="js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
