--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 	<script src ="bower_components/angular/angular.min.js"></script>
 	<script src ="bower_components/angular-route/angular-route.min.js"></script>
+	<script src = "bower_components/angular-resource/angular-resource.min.js"></script>
 	<script src ="bower_components/angular-material/angular-material.min.js"></script>
 	<script src="bower_components/angular-animate/angular-animate.min.js"></script>
 	<script src="bower_components/angular-aria/angular-aria.min.js"></script>
@@ -26,8 +27,9 @@
 	<script src="js/app.js"></script>
 	<script src="js/churchAppController.js"></script>
 	<script src="js/route-provider.js"></script>
+	<script src="js/service/weekly-message-service.js"></script>
 </head>
-<body ng-app="app" ng-controller="appController" >
+<body ng-app="app">
 	<div ng-include="'view/template/menu-template.html'" ></div>
 	<div class="container">
 		<div class="row">
