--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 	<title>Lewisham Church of christ</title>
 
+	<link href="https://fonts.googleapis.com/css?family=Oleo+Script:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Teko:400,700" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/contact-form.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/ie10-viewport-bug-workaround.css">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
@@ -36,7 +40,7 @@
 			<div class="col-sm-8">
 				<div ng-view></div>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4" style="background: linear-gradient(to left, #3a6186 , #FEF5E7); background: -webkit-linear-gradient(to left, #3a6186 , #FEF5E7)">
 				<div ng-include="'view/template/left-view-column.html'"></div>
 			</div>
 		</div>
