Added some images to file

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 	<div ng-include="'view/template/menu-template.html'" ></div>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-8" style="background: linear-gradient(to left, #ffffff, #FEF5E7); background: -webkit-linear-gradient(to left, #ffffff, #FEF5E7)">
-				<div ng-view style="min-height: 2000px"></div>
+			<div class="col-sm-8" style="background: linear-gradient(to right, #ffffff, #FEF5E7); background: -webkit-linear-gradient(to left, #ffffff, #FEF5E7)">
+				<div ng-view></div>
 			</div>
 			<div class="col-sm-4" style="background: linear-gradient(to left, #3a6186 , #FEF5E7); background: -webkit-linear-gradient(to left, #3a6186 , #FEF5E7); height: 100%">
-				<div ng-include="'view/template/left-view-column.html'" style="min-height: 2000px"></div>
+				<div ng-include="'view/template/left-view-column.html'"></div>
 			</div>
 		</div>
 	</div>
